--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ body {
 
 
 .grid-item {
-    border: 1px solid #ddd;
     text-align: center;
 }
 
@@ -143,4 +142,15 @@ input[type="button"]:hover {
 #pen-text, #board-text {
     border-radius: 5px;
     padding: 5px 5px;
+}
+
+.border {
+    border: 1px solid #ddd;
+
+}
+
+.btn-on {
+    background-color: #2666CF !important;
+    /* background-color: red; */
+    color: #fff !important;
 }
